<resources>
    <string name="notes_header">Store personal notes, contact info or questions for the speakers</string>
    <string name="notes_description_hint">Your notes will be displayed here, after you save them with a click on save.
        Keep in mind, this storage is not very persistent!
    </string>
    <string name="app_name">Women Techmakers Berlin</string>
    <string name="app_name_short">WTM Berlin</string>
    <string name="wtm_website_url">https://www.womentechmakers.com</string>
    <string name="wtm_faq">https://github.com/WTMBerlin/WTMBApp/blob/master/FAQ.md</string>
    <string name="collaborations_header">Collaboration partners</string>
    <string name="collaborations_header_description">To support us, ping one of the organizers on our slack</string>
    <string name="collaborations_description">As community of volunteers we work with external speakers and
        tutors.\nOur meetups are possible not only thanks to us but also thanks to the wonderful support, that we
        receive from Google and companies that are listed below.
        This is our contribution to making Berlin\'s tech scene diverse and inclusive!
    </string>
    <string name="collaboratiosn_call_for_action">We are open to collaborations! Contact Anna Morgiel via Slack
    </string>
    <string name="community_contributions_info">
        This App was created as learning project that would benefit the community Women Techmakers Berlin 💻.
        \nIt is a great place to start an adventure of becoming an open source contributor! Check the issues list in our
        GitHub Repository, some are labeled with `good first issue`.
        Support us by adding a pull request 🚀
        \n
        \n👨‍💻 👩‍💻
        \n
        \nFeel free to submit issues, pull requests or to create forks:
    </string>
    <string name="community_contributions_link">
        https://github.com/WTMBerlin/WTMBApp
    </string>
    <string name="community_contributions_header">
        Contributors Guide:
    </string>
    <string name="community_reviews_header">Organizers and community members about WTMB</string>
    <string name="community_local_header">About WTM Berlin️</string>
    <string name="community_local_description_header">WTM Berlin is part of the global \nWomen Techmakers program \nrun
        by
        Google
    </string>
    <string name="community_local_description">
        At WTM Berlin we are encouraging diversity in tech in Berlin since 2015. We offer visibility,
        networking and resources to help you make the tech community of Berlin more diverse and inclusive!
        Our activities include intense coding study groups, workshops on technical topics and social skills, as
        well as inspirational fireside chats. New and existing members are always welcome at all events, and all events
        are always open to everyone,
        regardless of gender/age/race/experience, etc. We follow the Berlin code of conduct for communities:
        http://berlincodeofconduct.org
    </string>
    <string name="events_upcoming_header">Upcoming</string>
    <string name="events_past_header">Past</string>
    <string name="events_no_upcoming_events_message">No upcoming events at the moment. Stay tuned!</string>
    <string name="events_header">Events</string>
    <string name="event_details_header_description">Description</string>
    <string name="event_details_open_meetup_page">View on Meetup</string>
    <string name="social_media_link_meetup" translatable="false">https://www.meetup.com/de-DE/women-techmakers-berlin/
    </string>
    <string name="social_media_link_facebook" translatable="false">https://b-m.facebook.com/WomenTechmakersBerlinPage/
    </string>
    <string name="social_media_link_twitter" translatable="false">https://twitter.com/wtm_berlin</string>
    <string name="social_media_link_slack" translatable="false">https://slack.wtmberlin.com/</string>
    <string name="social_media_header">Social media</string>
    <string name="social_media_description_general">We are active across social media!</string>
    <string name="social_media_description_meetup">You will find all our events on Meetup, open to RVSP:</string>
    <string name="social_media_description_slack">
        Slack is one of the most successful initiatives of our community - it has become a platform to connect with other members,
        to spread the word about interesting open positions in #jobs channel and to offer your skills in the channel #CVs.
        The channels #general and #random make it possible to reach out to more diverse Tech audience, for example to announce free/discounted diversity tickets or
        scholarships.

    </string>
    <string name="social_media_description_twitter">Tweet with #womentechmakers or tag us: @wtm_berlin</string>
    <string name="social_media_description_facebook">There is a Facebook page and group but we primarily encourage to sing in to our Slack.</string>
    <string name="nav_drawer_header">More info:</string>
    <string name="nav_drawer_social_media_menu_item">Social media 📱</string>
    <string name="nav_drawer_community_local_menu_item">About Women Techmakers Berlin ℹ️💡</string>
    <string name="nav_drawer_community_global_menu_item">Global Women Techmakers program 👩 ‍💻</string>
    <string name="nav_drawer_events_menu_item">Events 👥 📅 💻</string>
    <string name="nav_drawer_collaborations_menu_item">Collaboration partners 🏢</string>
    <string name="facebook_group">https://www.facebook.com/groups/1106085959408694/</string>
    <string name="organizers_info_screen_attendees">We are all unpaid volunteers supporting a tech community. Please
        respect our time!
        RVSP responsibly and if you can\'t make it to the event - just update your choice on Meetup.
        \nThis helps us estimate size of the events for the company, catering service and the attendees.
    </string>
    <string name="organizers_info_screen_tutors">If you have a skill to offer, like supporting one of our Study Groups on Android, Go, JavaScript or to give a one-time workshop on the topic of your expertise, reach out via slack</string>
    <string name="nav_drawer_personal_notes_menu_item">Personal notes 📝 💡</string>
    <string name="nav_drawer_study_groups_menu_item">Study groups 📅 🤖</string>
    <string name="nav_drawer_special_kids_friendly_events_menu_item">Special kids friendly events 🐻</string>
    <string name="nav_drawer_accessibility_menu_tem">Accessibility 🕶 💻️</string>
    <string name="nav_drawer_community_reviews_menu_item">Community reviews 📰</string>
    <string name="nav_drawer_wtm_berlin_organizers_menu_item">WTM Berlin organizers 👥</string>
    <string name="nav_drawer_contributions_and_feedback_menu_item">Contributions and feedback 📩 💡</string>
    <string name="accessibility_screen_sound_effect">zz zz zz ziuuum zz zz ziuum zzzzzzz ziuuuuuuuum zz zz zz zz
        ziuuum zz zz ziuum zzzzzzz ziuuuuuuuum zz zz zz zz ziuuumzz zzziuum zzzzzzz ziuuuuuuuum zz
    </string>
    <string name="accessibility_content_1">TODO TODO TODO The icon below is a very simple toy. If you open the list of apps on your phone and switch the TalkBack, the default
        accessibility tool for Android apps on, you can explore its hidden functionality.
        \nTalkBack usage: tap twice to confirm and scroll sideways to navigate. Thanks to this exercise you can understand for your own this everyday experience for some
        people.
    </string>
    <string name="accessibility_content_2">TalkBack should be preinstalled, if not it is available in app store for
        free. Explore the app in the TalkBack mode and click on the image above will result with an additional
        functionality. We should be aware of needs of people with impairments, so I highly encourage you to try TalkBack
        out and to support accessibility features in your project. Adding basic accessibility to an Android app is very
        easy (for example for web development it is a bit more tricky but still quite straightforward), so after reading
        an article or watching some videos you can contribute to open source projects, hopefully with more meaningful descriptions than implemented
        on this one!
    </string>
    <string name="accessibility_content_3">Start with adding meaningful labels for custom designed elements (back arrow, check-marks, x)
        and set importantForAccessibility=no for design elements will not be useful for the user in the screen reader user mode. Provide
        content descriptions for pictures and elements (ideally descriptions that are more meaningful that the one
        implemented on the image above). Ah, and mind the text-background contrast. \nYou are good to go! For more resources visit:
    </string>
    <string name="accessibility_github">https://github.com/WTMBerlin/WTMBApp/blob/master/ACCESSIBILITY.md</string>
    <string name="stats_screen_header">WTM Berlin in numbers 🔢 📈 🤝</string>
    <string name="contributions_cta">If you had any questions, accessibility remarks, or other feedback, submit an issue
        or reach out via Slack to one of our organizer with WTM icon symbol next to the name
    </string>
    <string name="contributions_thanks_you_note">Thanks to the organizers team, all supporters and community members,
        especially to https://twitter.com/m_jedyny who wrote base base of this app
    </string>
    <string name="study_groups_header">Past courses and workshops:</string>
    <string name="reviews_cta">You can write a blogpost that will be displayed on our website. Submit it in the MARKDOWN format via a Pull Request to our GitHub repository!</string>
    <string name="reviews_anna">Anna is a Jr Android Developer and WTM organizer, co-wrote this app.</string>
    <string name="reviews_miquel">Miquel supported our community as an organizer and a tutor during the Android, Kotlin and Flutter study Jams, always sharing his enthusiasm on community work.</string>
    <string name="reviews_miquel_weblink">https://youtu.be/1RmKXYcL20I?t=95</string>
    <string name="reviews_miquel_content_description">Miquel\'s interview at the International Women Day, YouTube</string>
    <string name="reviews_natalie_content_description">Natalie\'s interview at the International Women Day, YouTube</string>
    <string name="reviews_natalie_weblink">https://youtu.be/1RmKXYcL20I?t=3</string>
    <string name="reviews_natalie">Natalie, Women Techmakers Berlin lead about the origins of our WTM Chapter.</string>
    <string name="reviews_lara_weblink">https://youtu.be/1RmKXYcL20I?t=114</string>
    <string name="reviews_lara_content_description">Lara\'s interview at the International Women Day, YouTube</string>
    <string name="reviews_lara">Lara, Android Engineer and Google Developer Expert on Flutter. This interview was recorded shortly after her graduation from Android Study Jam. Lara supported our community by co-organising Flutter Study Jam on mobile development!</string>
    <string name="reviews_ely_weblink">http://wtmberlin.com/blog/my-experience-at-js-crash-course</string>
    <string name="reviews_ely_content_description">Ely\'s blog post on the Women Techmakers blog</string>
    <string name="reviews_ely">Ely, Software Engineer, JavaScript CrashCourse graduate</string>
    <string name="reviews_maria_weblink">http://wtmberlin.com/blog/Maria-story</string>
    <string name="reviews_maria_content_description">Maria\'s blog post on the Women Techmakers blog</string>
    <string name="reviews_maria">Maria\'s blog post of switching from a chemist background to a JavaScript developer after attending JS Crash Course. In the following year not only Maria stayed in the community, she contributed by organized the next JSCC edition!</string>
    <string name="reviews_title">Community members and organizers sharing their experience with WTM Berlin</string>
</resources>