<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

        <TextView
                android:gravity="center"
                android:text="@string/reviews_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/wtm_mini"
                android:padding="@dimen/material_space_quarter"
                android:layout_margin="@dimen/material_space_quarter"
                style="@style/WtmBerlin.Events.Name"/>
    </com.google.android.material.card.MaterialCardView>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/material_space">
            <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/material_space_half"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_marginTop="@dimen/material_space_half"
                        android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/reviews_maria"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/WtmBerlin.SocialMedia.Content"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/WtmBerlin.SocialMedia.Link"
                            android:drawableEnd="@drawable/ic_text"
                            android:autoLink="web"
                            android:contentDescription="@string/reviews_maria_content_description"
                            android:text="@string/reviews_maria_weblink"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/material_space_half"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_marginTop="@dimen/material_space_half"
                        android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/reviews_ely"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/WtmBerlin.SocialMedia.Content"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/WtmBerlin.SocialMedia.Link"
                            android:drawableEnd="@drawable/ic_text"
                            android:autoLink="web"
                            android:contentDescription="@string/reviews_ely_content_description"
                            android:text="@string/reviews_ely_weblink"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/material_space_half"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_marginTop="@dimen/material_space_half"
                        android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:text="@string/reviews_lara"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/WtmBerlin.SocialMedia.Content"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/WtmBerlin.SocialMedia.Content"
                            android:drawableEnd="@drawable/ic_video"
                            android:autoLink="web"
                            android:maxLines="1"
                            android:contentDescription="@string/reviews_lara_content_description"
                            android:text="@string/reviews_lara_weblink"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/material_space_half"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_marginTop="@dimen/material_space_half"
                        android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/reviews_natalie"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/WtmBerlin.SocialMedia.Item"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/WtmBerlin.SocialMedia.Link"
                            android:drawableEnd="@drawable/ic_video"
                            android:autoLink="web"
                            android:ellipsize="end"
                            android:contentDescription="@string/reviews_natalie_content_description"
                            android:text="@string/reviews_natalie_weblink"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/material_space_half"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_marginTop="@dimen/material_space_half"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/reviews_miquel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/WtmBerlin.SocialMedia.Item"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/WtmBerlin.SocialMedia.Link"
                            android:drawableEnd="@drawable/ic_video"
                            android:autoLink="web"
                            android:contentDescription="@string/reviews_miquel_content_description"
                            android:text="@string/reviews_miquel_weblink"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/material_space_half"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/WtmBerlin.SocialMedia.Item"
                        android:drawableBottom="@drawable/wtm_mini"
                        android:text="@string/reviews_anna"
                        android:layout_marginBottom="@dimen/material_space_half"
                        android:layout_marginTop="@dimen/material_space_half"/>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/material_space_half"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/WtmBerlin.SocialMedia.Item"
                        android:drawableBottom="@drawable/wtm_mini"
                        android:text="@string/reviews_cta"
                        android:layout_marginBottom="@dimen/material_space_half"
                        android:layout_marginTop="@dimen/material_space_half"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <ImageView
            android:background="@drawable/events_no_upcoming_events"
            android:layout_width="190dp" android:layout_height="0dp" android:layout_weight=".3"/>

</LinearLayout>
