<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/icon_meetup"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_meetup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social_media_content" />

    <TextView
        android:id="@+id/link_meetup"
        android:layout_width="222dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="@string/social_media_link_meetup"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/icon_meetup"

        tools:layout_editor_absoluteY="179dp" />

    <ImageView
        android:id="@+id/icon_slack"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_slack"
        app:layout_constraintBottom_toTopOf="@+id/icon_twitter"
        app:layout_constraintEnd_toEndOf="@+id/icon_meetup"
        app:layout_constraintStart_toStartOf="@+id/icon_meetup"
        app:layout_constraintTop_toBottomOf="@+id/icon_meetup"
        app:layout_constraintVertical_bias="0.506"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/link_slack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="@string/social_media_link_slack"
        app:layout_constraintBottom_toBottomOf="@+id/icon_slack"
        app:layout_constraintEnd_toEndOf="@+id/link_meetup"
        app:layout_constraintStart_toStartOf="@+id/link_meetup"
        app:layout_constraintTop_toTopOf="@+id/icon_slack" />

    <ImageView
        android:id="@+id/icon_twitter"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        android:src="@drawable/ic_twitter"
        app:layout_constraintBottom_toTopOf="@+id/icon_facebook"
        app:layout_constraintEnd_toEndOf="@+id/icon_slack"
        app:layout_constraintStart_toStartOf="@+id/icon_slack"
        app:layout_constraintTop_toBottomOf="@+id/icon_slack" />

    <TextView
        android:id="@+id/link_twitter"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="@string/social_media_link_twitter"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/icon_twitter"
        app:layout_constraintEnd_toEndOf="@+id/link_slack"
        app:layout_constraintStart_toStartOf="@+id/link_slack"
        app:layout_constraintTop_toTopOf="@+id/icon_twitter" />


    <ImageView
        android:id="@+id/icon_facebook"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_facebook"
        app:layout_constraintEnd_toEndOf="@+id/icon_twitter"
        app:layout_constraintStart_toStartOf="@+id/icon_twitter"
        app:layout_constraintTop_toBottomOf="@+id/icon_twitter" />

    <TextView
        android:id="@+id/link_facebook"
        android:layout_width="214dp"
        android:layout_height="0dp"
        android:autoLink="web"
        android:clickable="true"
        android:text="@string/social_media_link_facebook"
        app:layout_constraintBottom_toBottomOf="@+id/icon_facebook"
        app:layout_constraintEnd_toEndOf="@+id/link_twitter"
        app:layout_constraintStart_toStartOf="@+id/link_twitter"
        app:layout_constraintTop_toTopOf="@+id/icon_facebook" />

    <TextView
        android:id="@+id/social_media_header"
        style="@style/WtmBerlin.Events.ListHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="171dp"
        android:text="@string/social_media_header"
        app:layout_constraintBottom_toTopOf="@+id/link_meetup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/social_media_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:padding="8dp"
        android:text="@string/social_media_description"
        app:layout_constraintBottom_toTopOf="@+id/link_meetup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/social_media_header"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>